# tmux-fingers-rs

./: AGENTS.md  Cargo.toml  README.md  install-wizard.sh  rust-toolchain.toml  tmux-fingers-rs.tmux
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
docs/: gaps-vs-upstream.md
src/: cli.rs  huffman.rs  priority_queue.rs  tmux.rs
src/fingers/: action_runner.rs  config.rs  dirs.rs  hinter.rs  input_socket.rs  load_config.rs  mod.rs  start.rs  state.rs
tests/: compliance.rs  live_tmux.rs
tmux-fingers-rs/: AGENTS.md  README.md
tmux-fingers-rs/src/: lib.rs  main.rs  tmux_style_printer.rs
tmux-fingers-rs/src/fingers/: dirs.rs  match_formatter.rs  start.rs
