[package]
name = "tmux-fingers-rs"
version = "0.1.0"
edition = "2024"
description = "Rust port of tmux-fingers: copy text from a tmux pane using letter hints."
license = "MIT"
repository = "https://github.com/martintrojer/tmux-fingers-rs"
homepage = "https://github.com/martintrojer/tmux-fingers-rs"
readme = "README.md"
keywords = ["tmux", "tmux-plugin", "clipboard", "hints", "vimium"]
categories = ["command-line-utilities"]
rust-version = "1.85"

[[bin]]
name = "tmux-fingers-rs"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
pcre2 = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shell-words = "1"
